<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_budget_records"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="shankarenfo.wotismybudget.BudgetRecords"
    android:background="@android:color/holo_blue_light"
    android:weightSum="10">

    <LinearLayout
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:text="@string/InteractButtonPrev"
            android:layout_gravity="fill_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_PrevRecord"
            android:onClick="prevMonth" />

        <TextView
            android:text="@string/RecordsPlaceholderDate"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_CurrentRecordDate"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            tools:layout_gravity="center"
            android:layout_weight="1" />

        <Button
            android:text="@string/InteractButtonNext"
            android:layout_gravity="fill_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_NextRecord"
            android:onClick="nextMonth" />
    </LinearLayout>

    <TextView
        android:text="@string/RecordsPlaceholderNoRecord"
        android:id="@+id/txt_NoData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:visibility="gone"
        android:layout_weight="9" />

    <LinearLayout
        android:id="@+id/llv_RecordData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="9"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_weight="0.1"
                android:text="@string/RecordsPlaceholderDay"
                android:textColor="@android:color/black"
                android:textStyle="normal|bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/RecordsBudget"
                android:textColor="@android:color/black"
                android:textStyle="normal|bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="0.4"
                android:text="@string/RecordsPlaceholderAmount"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <ListView
            android:id="@+id/lst_Budgets"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.99"
            android:background="@android:color/background_light"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.001">

        <TextView
            android:text="@string/RecordsTotalBudget"
            android:layout_gravity="fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_TotalBudget"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:paddingTop="5dp"/>

        <TextView
            android:text="@string/RecordsPlaceholderSpending"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_TotalBudget"
            android:textColor="@android:color/black"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:layout_weight="1"
            android:paddingRight="10dp" />
    </LinearLayout>

    <Button
        android:layout_weight="0.1"
        android:text="@string/RecordsButtonSwitchView"
        android:layout_gravity="fill_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Infer"
        android:onClick="infer"/>

    <Button
        android:layout_weight="0.1"
        android:text="@string/RecordsButtonBack"
        android:layout_gravity="fill_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Done"
        android:onClick="backOut"/>

</LinearLayout>
