<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_inferred_expenses"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="shankarenfo.wotismybudget.InferredExpenses"
    android:background="@android:color/holo_blue_dark"
    android:weightSum="10">

    <TextView
        android:text="@string/CategoryHeading"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_InferredCosts"
        android:layout_weight="0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <TextView
            android:text="@string/CategoryCount"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_HeadingOccurences"
            android:layout_weight="0.1"/>

        <TextView
            android:text="@string/CategoryName"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_HeadingCategory"
            android:layout_weight="0.6"/>

        <TextView
            android:text="@string/CategoryTotalExpenses"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_HeadingTotals"
            android:layout_weight="0.4"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lst_CategoryExpenses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.1">

        <TextView
            android:text="@string/CategorySpendings"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_SubHeadingText"/>

        <TextView
            android:text="@string/CategoryPlaceholderSpendings"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_SubHeadingAmount"
            android:gravity="end"/>

    </LinearLayout>

    <Button
        android:text="@string/CategoryBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_SingleExpenses"
        android:layout_weight="1"
        android:onClick="indivExpenses"/>

</LinearLayout>
