<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="shankarenfo.wotismybudget.MainActivity"
    android:background="@android:color/holo_green_dark"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical|center_horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:id="@+id/lnl_data"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:paddingBottom="30dp"
        android:layout_marginBottom="40dp">

        <TextView
            android:text="@string/MainPlaceholderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:id="@+id/txt_CurrentDate"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:text="@string/MainPlaceholderSpending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_CurrentExpenses"
            android:layout_marginTop="0dp"
            android:textAllCaps="true"
            android:textSize="24sp"
            tools:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <Button
        android:text="@string/MainButtonBudgeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Accumula"
        android:onClick="moveToRecords"
        android:gravity="center_horizontal" />

    <Button
        android:text="@string/MainButtonNewExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_NewBudget"
        android:onClick="moveToNewExpenses"/>

    <Button
        android:text="@string/MainButtonManageRecs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_ManageRecords"
        android:onClick="manageRecords"
        />


</LinearLayout>
