<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_manage_records"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="shankarenfo.wotismybudget.ManageRecords"
    android:background="#CD6EFF"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.1">

        <TextView
            android:text="@string/FilesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_ManageFilesTitle"/>

        <Button
            android:text="@string/FilesReturn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_ManageRecordsQuit"
            android:onClick="backOut"
            android:layout_weight="1"/>

    </LinearLayout>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lst_RecordsList"
        android:layout_weight="0.9"
        android:background="#FFFFFF"/>

    <TextView
        android:text="@string/FilesExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_Managefiles"
        android:layout_weight="0.2"
        android:textColor="@android:color/black" />

</LinearLayout>
